# hazy-frames

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  test.yml
docs/: README.md  conf.py  index.rst  installation.rst  quickstart.rst
docs/api/: frame.rst  geometric_primitives.rst  index.rst  utils.rst
docs/examples/: index.rst
examples/: 01-surface_intersections.ipynb  02-frame-hierarchies.ipynb  03-simple-robot-arm.ipynb  04-simple-raytracing.ipynb
src/hazy/: __init__.py  constants.py  frame.py  primitives.py  utils.py
tests/: conftest.py  test_frame.py  test_integration.py  test_numpy_integration.py  test_primitives.py  test_utils.py
