[project]
name = "hazy-frames"
version = "0.1.0"
description = "Hierarchical coordinate frames - crystal clear transforms"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["geometry", "coordinate-systems", "transformations", "frames", "3d"]
authors = [
    {name = "Littie28"}
]
dependencies = [
    "numpy>=2.3.4",
    "scipy>=1.16.3",
]

[project.urls]
Homepage = "https://github.com/Littie28/hazy-frames"
Repository = "https://github.com/Littie28/hazy-frames"
Issues = "https://github.com/Littie28/hazy-frames/issues"

[project.optional-dependencies]
examples = []

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-watcher>=0.4.3",
]

[tool.ruff]
line-length = 88
exclude = ["docs"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "PYI", # pyright
    "TC",  # type-checking
]
exclude = ["*.ipynb"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    # "-v",
    "--strict-markers",
    "--tb=short",
    "--color=yes",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests across multiple components",
    "slow: Tests that take longer to run",
]

[tool.coverage.run]
source = ["src/hazy"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
