[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hazy"]

[project]
name = "hazy-frames"
version = "0.1.0"
description = "Hierarchical coordinate frames - crystal clear transforms"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["geometry", "coordinate-systems", "transformations", "frames", "3d"]
authors = [{ name = "Littie28" }]
dependencies = ["numpy>=2.3.4", "scipy>=1.16.3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Littie28/hazy-frames"
Repository = "https://github.com/Littie28/hazy-frames"
Issues = "https://github.com/Littie28/hazy-frames/issues"

[project.optional-dependencies]
examples = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
]

[dependency-groups]
dev = [
    "coverage-badge>=1.1.2",
    "hypothesis>=6.122.4",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "pre-commit>=4.4.0",
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-watcher>=0.4.3",
    "ruff>=0.14.5",
]
examples = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
]

[tool.ruff]
line-length = 88
exclude = ["docs"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "PYI", # pyright
    "TC",  # type-checking
]
exclude = ["*.ipynb"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "B015",
] # Allow pointless comparisons in tests (testing error cases)

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    # "-v",
    "--strict-markers",
    "--tb=short",
    "--color=yes",
]
markers = [
    "unit: Unit tests for core functionality",
    "numpy: NumPy integration tests for geometric primitives",
    "integration: test the interplay between different components",
]

[tool.coverage.run]
source = ["src/hazy"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
